--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -71,7 +71,8 @@
                     <li class="mb-3"><a href="@Url.Action("Index", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">HOME</a></li>
                     <li class="mb-3"><a href="@Url.Action("About", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">ABOUT</a></li>
                     <li class="mb-3"><a href="@Url.Action("SearchOrderPage", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">YOUR ORDERS</a></li>
-                    <li class="mb-3"> <a href="#" class="py-2 px-3 text-dark hover:italic hover:font-semibold">CHAT WITH US</a></li>
+                    <li class="mb-3"> <a href="@Url.Action("Chats","Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">CHAT WITH US</a></li>
+                    <li class="mb-3"> <a href="@Url.Action("Contact","Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">CONTACT</a></li>
                     <li class="mb-3"><a href="/User/Logout" class="py-2 px-3 text-dark hover:italic hover:font-semibold">LOGOUT</a></li>
                 </ul>
             </div>
