--- a/Views/User/Details_Info.cshtml
+++ b/Views/User/Details_Info.cshtml
@@ -21,7 +21,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="@Url.Action("Orders", "User", new {id = Html.DisplayFor(model => model.id_user)})" class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg hover:bg-blue-100 hover:text-blue-500">
+                        <a href="@Url.Action("Order", "Home"@*, new {id = Html.DisplayFor(model => model.id_user)}*@)" class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg hover:bg-blue-100 hover:text-blue-500">
                             <span class="flex-1 ml-3 whitespace-nowrap">Orders</span>
                         </a>
                     </li>
