--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -62,8 +62,8 @@
             <span class="w-25 text-sm text-start">
                 Crafted in part with recycled glass and ocean-bound plastic,
                 each phone comes in a recycled paper box. rafted in part with
-                recycled glass and ocean-bound plastic, in a recycled paper box
-                each phone comes in a recycled paper box.
+                recycled glass, in a recycled paper box
+                comes in a recycled paper box.
             </span>
             <span class="w-25 text-sm">
                 EST 2023. Privacy
@@ -76,131 +76,65 @@
         </div>
     </div>
 
-
-
-    @*product-mini-list*@
-    <div class="grid grid-cols-4 gap-4 justify-content-between mx-auto px-4" style="margin-bottom:3em; margin-top:3em">
-        @foreach (var item in Model)
-        {
-            if (item.id_product <= 67)
-            {
-
-                <div class="flex justify-center text-md w-full">
-                    <div class="block max-w-sm rounded-lg bg-white shadow-md w-full">
-                        @*<a href="#!">*@
-                        <img class="rounded-t-lg mx-auto object-center"
-                             style="height: 250px"
-                             src="~/wwwroot/Images/Products/@item.images"
-                             alt="" />
-                        @*</a>*@
-                        <div class="p-3 font-medium">
-                            <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
-
-                                @if (item.id_promo == null)
-                                {
-                                    <p class="text-2xl">$@Html.DisplayFor(modelItem => item.price)</p>
-                                    <div class="bg-danger py-2 px-3 rounded-md text-white">
-                                        0%
-                                    </div>
-                                }
-                                else
-                                {
-                                    <p class="text-2xl">$@Html.DisplayFor(modelItem => item.discount)</p>
-                                    <del class="text-xl text-red-600">@item.price.00$</del>
-                                    <div class="bg-danger py-2 px-3 rounded-md text-white">
-                                        @item.promocode.discount_price%
-                                    </div>
-                                }
-
-
-                            </div>
-
-                            <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 justify-between">
-                                <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
-                                <div class="flex flex-row">
-                                    @for (int i = 0; i < (int)item.rate; i++)
-                                    {
-                                        <i class="fa-solid fa-star text-yellow-500"></i>
-                                    }
-                                    @if ((double)item.rate > (int)item.rate)
-                                    {
-                                        <i class="fa-solid fa-star-half text-yellow-500"></i>
-                                    }
-                                </div>
-                            </h5>
-                            <div class="my-3 flex text-xs items-center justify-between">
-                                <div class="text-start">
-                                    <span class="p-2 rounded-full" style="border: 2px solid #0026ff; color: #0026ff">@Html.DisplayFor(modelItem => item.brand)</span>
-                                    <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
-                                </div>
-
-                                <div>
-                                    <a href="/Home/Details_Pro/@item.id_product" class="py-2 px-3 text-sm bg-blue-600 text-white rounded-full">View</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    @*new-product-list*@
+    <div class="grid grid-cols-3 justify-between justify-center px-4 space-x-2 my-4">
+        <div>
+            <div class="bg-gray-100 py-4 relative">
+                <img src="~/wwwroot/Images/Products/1.png" class="object-center relative" />
+                <div class="absolute end-0 top-4 bg-danger font-medium text-white px-4 py-2"
+                     style="border-radius: 50% 0 50% 0">
+                    SALE
                 </div>
-
-            <!--<div class="flex justify-center text-md w-full">
-                <div class="block max-w-sm rounded-lg bg-white shadow-md w-full">-->
-            @*<a href="#!">*@
-            <!--<img class="rounded-t-lg mx-auto object-center"
-                 style="height: 260px"
-                 src="~/wwwroot/Images/Products/@item.images"
-                 alt="" />-->
-            @*</a>*@
-            <!--<div class="p-3 font-medium">
-                        <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
-                            @if (item.id_promo != null)
-                            {
-                                decimal a = Math.Round(Convert.ToDecimal(item.price.Value * (100 - item.promocode.discount_price.Value) / 100));
-
-                                <p class="text-2xl text-red-600">$@a.00</p>
-                                <del class="text-xl-start text-gray-500">$@Html.DisplayFor(modelItem => item.price)</del>
-                                <div class="bg-danger py-2 px-3 rounded-md text-white">
-                                    <p>-@Html.DisplayFor(modelItem => item.promocode.discount_price)%</p>
-                                </div>
-                            }
-                            else
-                            {
-                                <p class="text-2xl text-red-600">$@Html.DisplayFor(modelItem => item.price)</p>
-                            }
-                        </div>
-
-                        <h5 class="mt-4 mb-3 flex text-neutral-800 justify-between">
-                            <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
-                            <div class="flex flex-row">
-                                @for (int i = 0; i < (int)item.rate; i++)
-                                {
-                                    <i class="fa-solid fa-star text-yellow-500"></i>
-                                }
-                                @if ((double)item.rate > (int)item.rate)
-                                {
-                                    <i class="fa-solid fa-star-half text-yellow-500"></i>
-                                }
-                            </div>
-                        </h5>
-
-
-
-                        <div class="my-3 flex text-xs items-center justify-between">
-                            <div class="text-start">
-                                <span class="p-2 rounded-full" style="border: 2px solid #0026ff; color: #0026ff">@Html.DisplayFor(modelItem => item.brand)</span>
-                                <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
-                            </div>
-
-                            <div>
-                                <a href="/Home/Details_Pro/@item.id_product" class="py-2 px-3 text-sm bg-blue-600 text-white rounded-full">View</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>-->
-        }
-    }
             </div>
+
+            @*Name + Status*@
+            <div class="flex mt-4 mb-2 justify-between justify-center font-medium">
+                <div class="flex mr-4 align-items-center space-x-2">
+                    <div class="h-3 w-3 rounded-full" style="background-color: black"></div>
+                    <span class="text-truncate text-xl">Galaxy S23 Pro</span>
+                    <div class="text-sm text-gray-200">12 sold</div> @*số lượt bán*@
+                </div>
+                <span class="ml-4 text-gray-200">Avail</span> @*Sold hoặc Avail*@
+            </div>
+
+            @*Price + Rating*@
+            <div class="flex justify-between align-items-center mb-2">
+                <div class="flex align-items-center">
+                    <div class="text-gray-800 text-2xl mr-4">$ 00.000</div>
+                    <div class="text-gray-800 text-md text-decoration-line-through">$ 00.000</div>
+                </div>
+                <div class="flex align-items-center">
+                    <i class="fa-solid fa-star text-yellow-500"></i>
+                    <i class="fa-solid fa-star text-yellow-500"></i>
+                    <i class="fa-solid fa-star text-yellow-500"></i>
+                    <i class="fa-solid fa-star text-yellow-500"></i>
+                    <i class="fa-solid fa-star text-yellow-500"></i>
+                    <span class="ml-4 font-medium">5.0</span>
+                </div>
+            </div>
+
+            <div class="flex justify-between">
+                <div class="flex">
+                    <div class="bg-gray-100 py-2 px-4 text-sm rounded-full mr-2">Samsung</div>
+                    <div class="bg-gray-100 py-2 px-4 text-sm rounded-full">Black</div>
+                </div>
+                <a href="#" class="bg-blue-600 py-2 px-4 text-white rounded-full">View</a>
+            </div>
+        </div>
+
+
+        <div class="bg-gray-100 py-3">
+            <img src="~/wwwroot/Images/Products/1.png" class="object-center" />
+        </div>
+
+        <div class="bg-gray-100 py-3">
+            <img src="~/wwwroot/Images/Products/1.png" class="object-center" />
+        </div>
+
+    </div>
+
+
+
 
             @*samsunng-iphone*@
             <div class="grid grid-cols-2 my-5">
